--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 	},
 	"dependencies": {
 		"@google/genai": "^1.34.0",
+		"@openrouter/sdk": "^0.3.11",
+		"svelte-lucide": "^3.0.1",
 		"sveltekit-superforms": "^2.29.1",
 		"zod": "^4.3.4"
 	}
